Fix event dispatching and window resizing in high-dpi mode.

TODO:
1. Currently there are no hover effects for backwards, forwards, refresh
and app menu button.
2. Minimize, Maximize and Close buttons are not receiving events in the
bottom half area, which will be fixed in another CL by changing client_area.

BUG=646926, 646927
TEST=manual (with --force-device-scale-factor=2)

Review-Url: https://codereview.chromium.org/2341483004
Cr-Commit-Position: refs/heads/master@{#424542}

Former-commit-id: 8ee02a33407c0456fcd4dd4ee919f66c12a88669