ui/aura/window_event_dispatcher.h
@@ -64,8 +64,6 @@ class AURA_EXPORT WindowEventDispatcher : public ui::EventProcessor,
   explicit WindowEventDispatcher(WindowTreeHost* host);
   ~WindowEventDispatcher() override;
 
-  void set_transform_events(bool value) { transform_events_ = value; }
-
   Window* mouse_pressed_handler() { return mouse_pressed_handler_; }
   Window* mouse_moved_handler() { return mouse_moved_handler_; }
 
@@ -265,8 +263,6 @@ class AURA_EXPORT WindowEventDispatcher : public ui::EventProcessor,
   ui::LocatedEvent* dispatching_held_event_;
 
   ScopedObserver<aura::Window, aura::WindowObserver> observer_manager_;
-
-  bool transform_events_;
 
   std::unique_ptr<EnvInputStateController> env_controller_;
 
