ui/views/mus/window_tree_host_mus.cc
@@ -58,11 +58,6 @@ WindowTreeHostMus::WindowTreeHostMus(NativeWidgetMus* native_widget,
   // Initialize the stub platform window bounds to those of the ui::Window.
   platform_window()->SetBounds(window->bounds());
 
-  // The location of events is already transformed, and there is no way to
-  // correctly determine the reverse transform. So, don't attempt to transform
-  // event locations, else the root location is wrong.
-  // TODO(sky): we need to transform for device scale though.
-  dispatcher()->set_transform_events(false);
   compositor()->SetHostHasTransparentBackground(true);
 
   input_method_ = base::MakeUnique<InputMethodMus>(this, window);
